--- a/imprint.html
+++ b/imprint.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <div class="loading"></div>
+    <!--<div class="loading"></div>-->
     <nav class="green">
       <div class="nav-wrapper container">
         <a href="#" class="brand-logo"
