--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <div class="loading"></div>
+    <!--<div class="loading"></div>-->
     <nav class="green">
       <div class="nav-wrapper container">
         <a href="#" class="brand-logo"
