--- a/imprint.html
+++ b/imprint.html
@@ -49,7 +49,7 @@
 
     <main>
       <div id="imprint" class="container">
-        <p style="margin-top: 2em; margin-bottom: 1em">
+        <p style="margin-top: 2em; margin-bottom: 1em;">
           <b>Angaben gemäß § 5 TMG:</b>
         </p>
         <p>
@@ -804,7 +804,7 @@
               Copyright &copy; 2020 SmashMC
             </div>
             <div class="footer-col col s12 m6 right-align">
-              <span style="font-size: 12px">We are number one!</span>
+              <span style="font-size: 12px;">We are number one!</span>
             </div>
           </div>
         </div>
