:boom: Complete redesign and recode

--- a/imprint.html
+++ b/imprint.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SmashMC.eu | The Ultimate Smash Network!</title>
+    <meta name="title" content="SmashMC | Imprint" />
+    <meta name="description" content="Contact us if you have questions." />
+    <meta
+      name="keywords"
+      content="smashmc, smash, imprint, impressum, minecraft smash, smash server, minecraft, molecraft, bedwars, bw-1vs1, minecraft server"
+    />
 
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://smashmc.eu/imprint" />
+    <meta property="og:title" content="SmashMC | Imprint" />
+    <meta
+      property="og:description"
+      content="Contact us if you have questions."
+    />
+    <meta
+      property="og:image"
+      content="https://smashmc.eu/assets/img/smashmc.png"
+    />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://smashmc.eu/imprint" />
+    <meta property="twitter:title" content="SmashMC | Imprint" />
+    <meta
+      property="twitter:description"
+      content="Contact us if you have questions."
+    />
+    <meta
+      property="twitter:image"
+      content="https://smashmc.eu/assets/img/smashmc.png"
+    />
+
+    <title>SmashMC | Imprint</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -16,31 +52,52 @@
       rel="stylesheet"
       media="screen,projection"
     />
-    <link rel="icon" href="assets/img/brand.png" />
+    <link rel="icon" href="assets/img/favicon.png" />
   </head>
 
   <body>
-    <!--<div class="loading"></div>-->
-    <nav class="green">
-      <div class="nav-wrapper container">
-        <a href="#" class="brand-logo"
-          ><img src="assets/img/brand.png" height="65px"
+    <nav>
+      <div class="nav-wrapper s-container">
+        <a href="index.html" class="brand-logo"
+          ><img src="assets/img/favicon.png" height="65px" alt="brand logo"
         /></a>
         <ul class="right">
-          <li><a href="index.html#home">Home</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#shop">Shop</a></li>
+          <li><a href="apply.html">Apply</a></li>
+          <!--<li><a href="appeal.html">Appeal</a></li>-->
+          <li><a href="rules.html">Rules</a></li>
         </ul>
-        <a href="#" class="navToggle"><i class="material-icons">menu</i></a>
+        <span class="navToggle"><i class="material-icons">menu</i></span>
       </div>
     </nav>
 
     <header id="home">
-      <div class="vertical-align">
-        <div class="container center-align">
-          <div class="row">
-            <div class="col s12 m8 offset-m2">
-              <img src="assets/img/logo.png" width="90%" height="auto" />
+      <div class="overlay">
+        <div class="vertical-align">
+          <div class="s-container center-align">
+            <div class="row">
+              <div
+                class="col s12 l8 xl4 left-align animate__animated animate__fadeInLeft"
+              >
+                <span>Website</span>
+                <h1>imprint</h1>
+                <p>Contact us if you have questions.</p>
+                <div class="online">
+                  <span class="material-icons">group</span>
+                  <span class="text">Online :</span
+                  ><span class="slots">0 / 100</span>
+                </div>
+              </div>
+              <div
+                class="col xl4 offset-xl2 hide-on-med-and-down right-align animate__animated animate__bounceInUp"
+              >
+                <img
+                  class="skinrender"
+                  src="assets/img/skins/imprint.png"
+                  alt="skinrender"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -49,7 +106,7 @@
 
     <main>
       <div id="imprint" class="container">
-        <p style="margin-top: 2em; margin-bottom: 1em;">
+        <p style="margin-top: 2em; margin-bottom: 1em">
           <b>Angaben gemäß § 5 TMG:</b>
         </p>
         <p>
@@ -764,33 +821,81 @@
             </p>
           </div>
           <div class="col l3 offset-l3 s12">
-            <h5 class="white-text">Contact</h5>
+            <h5 class="white-text">Links</h5>
             <div class="row contact">
               <div class="col">
                 <a
                   href="https://www.youtube.com/channel/UCXCWMVDmilgSg4xdiVwEHxw"
                   target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="assets/svg/youtube-brands.svg"
                     height="15px"
                     width="15px"
+                    alt="youtube"
                 /></a>
               </div>
               <div class="col">
-                <a href="https://twitter.com/SmashMC_EU" target="_blank"
+                <a
+                  href="https://twitter.com/SmashMC_EU"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="assets/svg/twitter-brands.svg"
                     height="15px"
                     width="15px"
+                    alt="twitter"
                 /></a>
               </div>
               <div class="col">
-                <a href="ts3server://smashmc.eu"
+                <a
+                  href="https://www.instagram.com/smashmc.eu"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img
+                    src="assets/svg/instagram-brands.svg"
+                    height="15px"
+                    width="15px"
+                    alt="instagram"
+                /></a>
+              </div>
+              <div class="col">
+                <a
+                  href="https://www.tiktok.com/@smashmc.eu"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img
+                    src="assets/svg/tiktok-brands.svg"
+                    height="15px"
+                    width="15px"
+                    alt="instagram"
+                /></a>
+              </div>
+              <div class="col">
+                <a
+                  href="ts3server://smashmc.eu"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="assets/svg/teamspeak-brands.svg"
                     height="15px"
                     width="15px"
+                    alt="teamspeak3"
                 /></a>
+              </div>
+              <div class="col">
+                <a
+                  href="https://discord.com/invite/uz2y9bH"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img
+                    src="assets/svg/discord-brands.svg"
+                    height="15px"
+                    width="15px"
+                    alt="discord"
+                  />
+                </a>
               </div>
             </div>
           </div>
@@ -801,10 +906,10 @@
           <br />
           <div class="row">
             <div class="footer-col col s12 m6">
-              Copyright &copy; 2020 SmashMC
+              Copyright &copy; 2021 SmashMC
             </div>
             <div class="footer-col col s12 m6 right-align">
-              <span style="font-size: 12px;">We are number one!</span>
+              <a href="imprint.html">Impressum & Dateschutz</a>
             </div>
           </div>
         </div>
@@ -824,10 +929,30 @@
         $("nav").toggleClass("open");
       });
 
+      function ping(ip, port) {
+        $.getJSON(
+          "https://api.minetools.eu/ping/" + ip + "/" + port,
+          function (json) {
+            if (json) {
+              if (json.players) {
+                if (json.players.online && json.players.max) {
+                  $(".slots").each(function () {
+                    $(this).html(
+                      json.players.online + " / " + json.players.max
+                    );
+                  });
+                }
+              }
+            }
+          }
+        );
+      }
+
       $(document).ready(function () {
-        setTimeout(function () {
-          $(".loading").fadeOut();
-        }, 1200);
+        ping("mc.smashmc.eu", "25565");
+        setInterval(function () {
+          ping("mc.smashmc.eu", "25565");
+        }, 1000 * 30);
       });
     </script>
   </body>
