:sparkles: Little molecraft secret

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                 <span class="title">Molecraft</span>
                 <div class="icon">
                   <img
+                    id="molecraft"
                     src="assets/img/molecraft/item.png"
                     alt="minecraft item"
                   />
