:zap: Remove html from html links

--- a/appeal.html
+++ b/appeal.html
@@ -70,9 +70,9 @@
         <ul class="right">
           <li><a href="/#about">About</a></li>
           <li><a href="/#shop">Shop</a></li>
-          <li><a href="apply.html">Apply</a></li>
-          <li><a href="appeal.html">Appeal</a></li>
-          <li><a href="rules.html">Rules</a></li>
+          <li><a href="apply">Apply</a></li>
+          <li><a href="appeal">Appeal</a></li>
+          <li><a href="rules">Rules</a></li>
         </ul>
         <span class="navToggle"><i class="material-icons">menu</i></span>
       </div>
@@ -280,7 +280,7 @@
               Copyright &copy; 2021 SmashMC
             </div>
             <div class="footer-col col s12 m6 right-align">
-              <a href="imprint.html">Impressum & Dateschutz</a>
+              <a href="imprint">Impressum & Dateschutz</a>
             </div>
           </div>
         </div>
