--- a/rules.html
+++ b/rules.html
@@ -61,15 +61,15 @@
   <body>
     <nav>
       <div class="nav-wrapper s-container">
-        <a href="index.html" class="brand-logo"
+        <a href="/" class="brand-logo"
           ><img src="assets/img/favicon.png" height="65px" alt="brand logo"
         /></a>
         <ul class="right">
-          <li><a href="index.html#about">About</a></li>
-          <li><a href="index.html#shop">Shop</a></li>
-          <li><a href="apply.html">Apply</a></li>
+          <li><a href="/#about">About</a></li>
+          <li><a href="/#shop">Shop</a></li>
+          <li><a href="apply">Apply</a></li>
           <!--<li><a href="appeal.html">Appeal</a></li>-->
-          <li><a href="#">Rules</a></li>
+          <li><a href="rules">Rules</a></li>
         </ul>
         <span class="navToggle"><i class="material-icons">menu</i></span>
       </div>
@@ -351,7 +351,7 @@
               Copyright &copy; 2021 SmashMC
             </div>
             <div class="footer-col col s12 m6 right-align">
-              <a href="imprint.html">Impressum & Dateschutz</a>
+              <a href="imprint">Impressum & Dateschutz</a>
             </div>
           </div>
         </div>
