:zap: Update Shop

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
                     <li>BW-1VS1 VIP settings</li>
                     <li>Molecraft event tokens</li>
                     <li>Private Smash rounds (4 slots)</li>
+                    <li>10 Survival homes</li>
                     <li>+10.35 respect</li>
                   </ul>
                   <button onclick="showAlert()" class="buy noselect">
@@ -310,6 +311,7 @@
                     <li>Force Smash maps</li>
                     <li>Joinme Command</li>
                     <li>Private Smash rounds (8 slots)</li>
+                    <li>25 Survival homes</li>
                     <li>+99999999 respect</li>
                   </ul>
                   <button onclick="showAlert()" class="buy noselect">
