:bug: Fix rules page title

--- a/rules.html
+++ b/rules.html
@@ -38,7 +38,7 @@
       content="https://smashmc.eu/assets/img/smashmc.png"
     />
 
-    <title>SmashMC | Apply</title>
+    <title>SmashMC | Rules</title>
 
     <link
       rel="stylesheet"
