--- a/appeal.html
+++ b/appeal.html
@@ -25,7 +25,7 @@
     />
     <meta
       property="og:image"
-      content="https://smashmc.eu/assets/img/smashmc.png"
+      content="https://smashmc.eu/assets/img/smashmc.avif"
     />
 
     <meta property="twitter:card" content="summary_large_image" />
@@ -38,7 +38,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://smashmc.eu/assets/img/smashmc.png"
+      content="https://smashmc.eu/assets/img/smashmc.avif"
     />
 
     <title>SmashMC | Appeal</title>
@@ -58,14 +58,14 @@
       rel="stylesheet"
       media="screen,projection"
     />
-    <link rel="icon" href="assets/img/favicon.png" />
+    <link rel="icon" href="assets/img/favicon.avif" />
   </head>
 
   <body>
     <nav>
       <div class="nav-wrapper s-container">
         <a href="/" class="brand-logo"
-          ><img src="assets/img/favicon.png" height="65px" alt="brand logo"
+          ><img src="assets/img/favicon.avif" height="65px" alt="brand logo"
         /></a>
         <ul class="right">
           <li><a href="/#about">About</a></li>
