--- a/apply.html
+++ b/apply.html
@@ -23,7 +23,7 @@
     />
     <meta
       property="og:image"
-      content="https://smashmc.eu/assets/img/smashmc.png"
+      content="https://smashmc.eu/assets/img/smashmc.avif"
     />
 
     <meta property="twitter:card" content="summary_large_image" />
@@ -35,7 +35,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://smashmc.eu/assets/img/smashmc.png"
+      content="https://smashmc.eu/assets/img/smashmc.avif"
     />
 
     <title>SmashMC | Apply</title>
@@ -55,14 +55,14 @@
       rel="stylesheet"
       media="screen,projection"
     />
-    <link rel="icon" href="assets/img/favicon.png" />
+    <link rel="icon" href="assets/img/favicon.avif" />
   </head>
 
   <body>
     <nav>
       <div class="nav-wrapper s-container">
         <a href="index.html" class="brand-logo"
-          ><img src="assets/img/favicon.png" height="65px" alt="brand logo"
+          ><img src="assets/img/favicon.avif" height="65px" alt="brand logo"
         /></a>
         <ul class="right">
           <li><a href="/#about">About</a></li>
