--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     />
     <meta
       property="og:image"
-      content="https://smashmc.eu/assets/img/smashmc.png"
+      content="https://smashmc.eu/assets/img/smashmc.avif"
     />
 
     <meta property="twitter:card" content="summary_large_image" />
@@ -44,7 +44,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://smashmc.eu/assets/img/smashmc.png"
+      content="https://smashmc.eu/assets/img/smashmc.avif"
     />
 
     <title>SmashMC | The Ultimate Smash Network!</title>
@@ -64,14 +64,14 @@
       rel="stylesheet"
       media="screen,projection"
     />
-    <link rel="icon" href="assets/img/favicon.png" />
+    <link rel="icon" href="assets/img/favicon.avif" />
   </head>
 
   <body>
     <nav>
       <div class="nav-wrapper s-container">
         <a href="/" class="brand-logo"
-          ><img src="assets/img/favicon.png" height="65px" alt="brand logo"
+          ><img src="assets/img/favicon.avif" height="65px" alt="brand logo"
         /></a>
         <ul class="right">
           <li><a href="#about">About</a></li>
@@ -168,7 +168,7 @@
                 </div>
                 <img
                   class="preview"
-                  src="assets/img/smash/preview.png"
+                  src="assets/img/smash/preview.avif"
                   alt="game preview"
                 />
                 <p>
@@ -192,7 +192,7 @@
                 </div>
                 <img
                   class="preview"
-                  src="assets/img/molecraft/preview.png"
+                  src="assets/img/molecraft/preview.avif"
                   alt="game preview"
                 />
                 <p>
@@ -212,7 +212,7 @@
                 </div>
                 <img
                   class="preview"
-                  src="assets/img/bedwars/preview.png"
+                  src="assets/img/bedwars/preview.avif"
                   alt="game preview"
                 />
                 <p>
@@ -236,7 +236,7 @@
                 </div>
                 <img
                   class="preview"
-                  src="assets/img/survival/preview.png"
+                  src="assets/img/survival/preview.avif"
                   alt="game preview"
                 />
                 <p>
@@ -256,7 +256,7 @@
                 </div>
                 <img
                   class="preview"
-                  src="assets/img/gungame/preview.png"
+                  src="assets/img/gungame/preview.avif"
                   alt="game preview"
                 />
                 <p>
