--- a/imprint.html
+++ b/imprint.html
@@ -63,10 +63,9 @@
         /></a>
         <ul class="right">
           <li><a href="/#about">About</a></li>
-          <li><a href="/#shop">Shop</a></li>
-          <li><a href="apply">Apply</a></li>
-          <!--<li><a href="appeal.html">Appeal</a></li>-->
+          <li><a href="https://shop.smashmc.eu">Shop</a></li>
           <li><a href="rules">Rules</a></li>
+          <li><a href="https://forum.smashmc.eu">Forum</a></li>
         </ul>
         <span class="navToggle"><i class="material-icons">menu</i></span>
       </div>
@@ -78,7 +77,14 @@
           <div class="s-container center-align">
             <div class="row">
               <div
-                class="col s12 l8 xl4 left-align animate__animated animate__fadeInLeft"
+                class="
+                  col
+                  s12
+                  l8
+                  xl4
+                  left-align
+                  animate__animated animate__fadeInLeft
+                "
               >
                 <span>Website</span>
                 <h1>imprint</h1>
@@ -90,7 +96,14 @@
                 </div>
               </div>
               <div
-                class="col xl4 offset-xl2 hide-on-med-and-down right-align animate__animated animate__bounceInUp"
+                class="
+                  col
+                  xl4
+                  offset-xl2
+                  hide-on-med-and-down
+                  right-align
+                  animate__animated animate__bounceInUp
+                "
               >
                 <img
                   class="skinrender"
