--- a/rules.html
+++ b/rules.html
@@ -65,11 +65,10 @@
           ><img src="assets/img/favicon.png" height="65px" alt="brand logo"
         /></a>
         <ul class="right">
-          <li><a href="/#about">About</a></li>
-          <li><a href="/#shop">Shop</a></li>
-          <li><a href="apply">Apply</a></li>
-          <!--<li><a href="appeal.html">Appeal</a></li>-->
+          <li><a href="#about">About</a></li>
+          <li><a href="https://shop.smashmc.eu">Shop</a></li>
           <li><a href="rules">Rules</a></li>
+          <li><a href="https://forum.smashmc.eu">Forum</a></li>
         </ul>
         <span class="navToggle"><i class="material-icons">menu</i></span>
       </div>
@@ -81,7 +80,14 @@
           <div class="s-container center-align">
             <div class="row">
               <div
-                class="col s12 l8 xl4 left-align animate__animated animate__fadeInLeft"
+                class="
+                  col
+                  s12
+                  l8
+                  xl4
+                  left-align
+                  animate__animated animate__fadeInLeft
+                "
               >
                 <span>Our server</span>
                 <h1>rules</h1>
@@ -93,7 +99,14 @@
                 </div>
               </div>
               <div
-                class="col xl4 offset-xl2 hide-on-med-and-down right-align animate__animated animate__bounceInUp"
+                class="
+                  col
+                  xl4
+                  offset-xl2
+                  hide-on-med-and-down
+                  right-align
+                  animate__animated animate__bounceInUp
+                "
               >
                 <img
                   class="skinrender"
